--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coreui/coreui": "^5.2.0",
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@fontsource/poppins": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@supabase/supabase-js": "^2.49.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
     "next": "15.1.7",
     "pannellum": "^2.5.6",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
