--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@fontsource/poppins": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@react-google-maps/api": "^2.20.6",
     "@supabase/supabase-js": "^2.49.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
