--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "next": "15.1.7",
     "pannellum": "^2.5.6",
     "react": "^19.0.0",
