--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,6 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7"
+    "@eslint/eslintrc": "^3"
   }
 }
